# guru_hw_16_python

./: pyproject.toml
