[tool.poetry]
name = "hw-16-python"
version = "0.1.0"
description = "It's test poetry project"
authors = ["Andrei Shabaev <shabaevandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "^1.0.2"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
